# alice

./: .gitignore  Cargo.toml  README.md
alice-architecture/: Cargo.toml
alice-architecture-derive/: Cargo.toml
alice-architecture-derive/src/: aggregate_root.rs  i18n_enum.rs  lib.rs
alice-architecture/src/: background_service.rs  jwt_payload.rs  lib.rs  model.rs  response.rs
alice-architecture/src/event_system/: mod.rs  model.rs  repository.rs
alice-architecture/src/message_queue/: consumer.rs  producer.rs
alice-architecture/src/repository/: mod.rs
alice-di/: Cargo.toml
alice-di-derive/: Cargo.toml
alice-di-derive/src/: actix.rs  auto_inject.rs
alice-di/src/: lib.rs
alice-infrastructure/: Cargo.toml
alice-infrastructure/src/: config.rs  error.rs  event_system.rs  http_client.rs  lib.rs
alice-infrastructure/src/message_queue/: internal_message_queue_producer.rs  kafka_message_queue_producer.rs
alice-infrastructure/src/middleware/: authorization.rs  error_msg_i18n.rs  mod.rs
alice-infrastructure/src/telemetry/: config.rs  mod.rs
alice-web/: Cargo.toml
alice-web/src/: authorize.rs  lib.rs  message_consumer.rs
