[package]
name = "alice-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
alice-architecture-derive = { path = "../alice-architecture-derive", optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
sea-orm = { workspace = true, default_features = false }
num-traits = { workspace = true }

[features]
derive = ["alice-architecture-derive"]
