[package]
name = "alice-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
alice-architecture-derive = { path = "../alice-architecture-derive", optional = true }
uuid = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
sea-orm = { workspace = true, default_features = false, optional = true }
num-traits = { workspace = true, optional = true }

[features]
derive = ["dep:alice-architecture-derive"]
event = ["repository", "model", "dep:chrono"]
model = ["repository"]
repository = ["dep:sea-orm", "dep:num-traits", "dep:serde_json"]
web = ["dep:serde_json"]
background-service = []
mq = []
