[package]
name = "alice-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-i18n = { workspace = true }
alice-architecture = { workspace = true }
# error
anyhow = { workspace = true }
# async
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
flume = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
# web
actix-http = { workspace = true }
actix-web = { workspace = true, optional = true }
url = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }
# log
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
  "tracing-log",
  "env-filter",
], optional = true }
opentelemetry = { workspace = true, features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
log = { workspace = true }
# data
base64 = { workspace = true }
config = { workspace = true, features = ["yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, optional = true, features = ["serde"] }
# middlewares
rdkafka = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true, features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
] }
jsonwebtoken = { workspace = true, optional = true }
# code
task-local-extensions = { workspace = true, optional = true }
thiserror = { workspace = true }
database-model = { workspace = true, optional = true }

[build-dependencies]
cmake = { workspace = true, optional = true }

[features]
http-client = ["dep:reqwest"]
actix-middleware = [
  "dep:futures-util",
  "dep:actix-web",
  "dep:jsonwebtoken",
  "dep:url",
  "dep:reqwest",
  "error",
  "sea-orm-db",
  "dep:database-model",
  "dep:async-trait",
  "dep:uuid",
  "alice-architecture/web",
]
kafka-mq = [
  "rdkafka/cmake-build",
  "dep:cmake",
  "dep:async-trait",
  "alice-architecture/mq",
]
flume-mq = [
  "dep:flume",
  "dep:async-trait",
  "tokio/rt",
  "alice-architecture/background-service",
  "alice-architecture/mq",
]
sea-orm-db = ["sea-orm"]
telemetry = [
  "dep:tracing",
  "dep:tracing-opentelemetry",
  "dep:tracing-log",
  "dep:tracing-subscriber",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:tracing-appender",
]
event-system = ["dep:uuid", "alice-architecture/event"]
error = ["dep:actix-web", "alice-architecture/derive"]
full = [
  "http-client",
  "sea-orm-db",
  "kafka-mq",
  "actix-middleware",
  "telemetry",
  "flume-mq",
  "event-system",
  "error",
]
