[package]
name = "alice-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
alice-architecture = { workspace = true }
actix-i18n = { workspace = true, optional = true }
# error
anyhow = { workspace = true }
# async
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
flume = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
# web
actix-http = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
url = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }
# log
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
], optional = true }
opentelemetry = { workspace = true, features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
# data
config = { workspace = true, features = ["yaml"] }
base64 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"], optional = true }
# middlewares
rdkafka = { workspace = true, optional = true }
sea-orm = { workspace = true, features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
], optional = true }
jsonwebtoken = { workspace = true, optional = true }
# code
task-local-extensions = { workspace = true, optional = true }
thiserror = { workspace = true }
database-model = { workspace = true, optional = true }

[build-dependencies]
cmake = { workspace = true, optional = true }

[features]
http-client = ["dep:reqwest"]
actix-middleware = [
  "dep:futures-util",
  "dep:actix-web",
  "dep:jsonwebtoken",
  "dep:url",
  "dep:reqwest",
  "dep:database-model",
  "dep:async-trait",
  "dep:uuid",
  "dep:actix-http",
  "dep:actix-i18n",
  "dep:base64",
  "alice-architecture/web",
  "error",
  "sea-orm-db",
]
kafka-mq = [
  "rdkafka/cmake-build",
  "dep:cmake",
  "dep:async-trait",
  "alice-architecture/mq",
]
flume-mq = [
  "dep:flume",
  "dep:async-trait",
  "tokio/rt",
  "alice-architecture/background-service",
  "alice-architecture/mq",
]
sea-orm-db = ["sea-orm"]
telemetry = [
  "dep:tracing",
  "dep:tracing-opentelemetry",
  "dep:tracing-subscriber",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:tracing-appender",
]
event-system = ["dep:uuid", "alice-architecture/event"]
error = [
  "dep:actix-http",
  "dep:actix-web",
  "dep:base64",
  "alice-architecture/derive",
]
full = [
  "http-client",
  "sea-orm-db",
  "kafka-mq",
  "actix-middleware",
  "telemetry",
  "flume-mq",
  "event-system",
  "error",
]
